Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: sachin200697/client
#we can write different objects by seprating them by ---
#below code is to create a service like posts-srv.yml file
#we can either use same depl file or can create a separate file
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP #it's optional as it is default one
      port: 3000
      targetPort: 3000
