Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: sachin200697/comments
#we can write different objects by seprating them by ---
#below code is to create a service like posts-srv.yml file
#we can either use same depl file or can create a separate file
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 9001
      targetPort: 9001
