Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: sachin200697/moderation
#we can write different objects by seprating them by ---
#below code is to create a service like posts-srv.yml file
#we can either use same depl file or can create a separate file
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 9003
      targetPort: 9003
