Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/posts-depl.yml
apiVersion: apps/v1 #in apps/v1 directory Deployment is present
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector: #selector and templatte->matadata works together, selector is to tell Deployment which pods it need to manage
    matchLabels:
      app: posts #it can be like: myApp: posts (means any key value pair)
  template:
    metadata: #it is the config apply to pod means pod will be give a label as app->posts
      labels:
        app: posts
    spec: #tell specification of a pod
      containers:
        - name: posts
          #image: sachin200697/posts:0.0.1
          image: sachin200697/posts
#we can write different objects by seprating them by ---
#below code is to create a service like posts-srv.yml file
#we can either use same depl file or can create a separate file
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv #it should be different than the name that
  # we mention in posts-srv.yml file otherwise kubernates will think that we want
  # to modify the NodePort service and it will replate it with posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP #optional, as it is default
  ports:
    - name: posts
      protocol: TCP
      port: 9000
      targetPort: 9000
