Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: sachin200697/query
#we can write different objects by seprating them by ---
#below code is to create a service like posts-srv.yml file
#we can either use same depl file or can create a separate file
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 9002
      targetPort: 9002
