Section 4 - Services with Kubernetes - Part 2/blog-boilerplate/infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true' #with this annotation
spec:
  ingressClassName: nginx #this will tell ingress that we are providing a config file
  #for routing and mapping to different services
  rules:
    - host: posts.com #we might host many applications using kubernates, so this
      #host property is to tell that this config file is for posts.com app
      #it means to access the posts service, instead of using localhost we need to
      #use posts.com
      #but to use posts.com (to tell that posts.com is equal to localhost) we
      #need to do some configuration to our hosts file:
      #  C:\Windows\System32\drivers\etc\hosts
      # add line : "127.0.0.1 posts.com"  to above file
      # in case of minikube instaed of 127.0.0.1 use minikube ip
      http:
        paths:
          - path: /posts/create #for this path we want to send the requests to posts-clusterip-srv
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts-clusterip-srv #name of posts service
                port:
                  number: 9000 #port of posts service
          - path: /posts
            pathType: ImplementationSpecific
            backend:
              service:
                name: query-srv
                port:
                  number: 9002
          - path: /posts/?(.*)/comments #infress does not support wildcard thing, so need to give a regular expression
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port:
                  number: 9001
          - path: /?(.*) #for the home page after / there can be anything so it support all things
            # because it is least significant so it sould come at last
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
